...
        android:name="com.example.foodie.views.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">

        <!-- Action to HomePageFragment -->
        <action
            android:id="@+id/action_loginFragment_to_homePageFragment"
            app:destination="@+id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />

        <!-- Action to RegisterFragment -->
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <!-- Home Page Fragment -->
    <fragment
        android:id="@+id/homeFragment"
...
