<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MenuFragment">

    <!-- Reusable header layout -->
    <include
        android:id="@+id/include"
        layout="@layout/header_layout_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- RecyclerView for the menu items -->

    <!-- Fixed layout container at the bottom -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cart_layout_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_layout_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewMenu">

        <!-- Rectangle view or background for the TextViews -->
        <View
            android:id="@+id/cart_view"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_rectangle_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Basket TextView -->
        <TextView
            android:id="@+id/basket_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Basket"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cart_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cart_view"
            app:layout_constraintVertical_bias="0.5" />

        <!-- Items Count TextView -->

        <!-- Price Total TextView -->
        <TextView
            android:id="@+id/tvTotalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="Items Count"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/cart_view"
            app:layout_constraintStart_toEndOf="@+id/basket_text"
            app:layout_constraintTop_toTopOf="@+id/cart_view"
            app:layout_constraintVertical_bias="0.487" />

        <TextView
            android:id="@+id/tvTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingEnd="16dp"
            android:text="Total"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cart_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cart_view"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



