...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/menuItemName" />

            <!-- Round button with plus icon -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/plus_sign"
                android:visibility="visible"
...
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.79">

                <!-- Minus Button with drawable -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMinus"
                    android:layout_width="50dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="clip_horizontal|center"
                    android:padding="0dp"
...
